# piper

./: .gitignore  Cargo.toml  Pipfile  README.md  requirements.txt
notifications/: Cargo.toml
pipelines/: example.piper  example_new.piper  meta_example.piper  meta_example_new.piper  recon.piper  test-pipe.yaml  test.yml
piper/: Cargo.toml  __main__.py  agent_config.toml  config.toml  pypyr5asyncio.py
piper/src/: main.rs
piper/steps/: foo.py  rustscan.py
piper_agent/: Cargo.toml
piper_agent/proto/: api.proto
piper_agent/src/: agent.rs  client.rs  lib.rs
piper_dsl/: Cargo.toml
piper_dsl/src/: grammar.pest  lib.rs  parser.rs  parser.rs.bak  piper.pest
piper_runner/: Cargo.toml
piper_runner/src/: runner.rs
piper_tasks/: Cargo.toml
piper_tasks/src/: .http.rs.rustfmt  cmd.rs  http.rs  lib.rs  llm.rs  lua.rs  notify.rs  subdomains.rs  task.rs  var_ops.rs
test/: config.toml  test.yml
test/agent/: config.toml
