[package]
name = "piper_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
serde_json = "1.0.59"
tokio = { version = "1.17.0" }
pyo3 = { version = "0.15.1", features = ["auto-initialize"] }
piper_tasks = { path = "../piper_tasks" }
rusqlite = { version = "0.27.0", features = ["bundled"] }
