[package]
type = ["lib"]
name = "piper_tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.10.0-rc.1", features = ["lua54", "vendored"] }
regex = "1.5.6"
anyhow = "1.0.79"
hf-hub = "0.3.2"
serde_json = "1.0.113"
tokenizers = "0.15.1"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = {version = "0.11", features = ["blocking", "json"]}
